<resources>
    <string name="app_name">TrabalhoFinalPDMPedroAugustoVieiraDeFreitas</string>
    <string name="MenuIinicial">Menu Inicial</string>
    <string name="escolha_uma_das_op_es_abaixo">Escolha uma das opções abaixo:</string>
    <string name="op_oes_cliente">Opçoes Cliente</string>
    <string name="op_es_produto">Opções Produto</string>
    <string name="op_es_pedido">Opções Pedido</string>
    <string name="CLiente">Cliente</string>
    <string name="CadastrarClientes">Cadastrar Clientes</string>
    <string name="visualizarClientes">Visualizar Clientes</string>
    <string name="alterarCliente">Alterar Clientes</string>
    <string name="excluirCliente">Excluir Clientes</string>
    <string name="Produto">Produto</string>
    <string name="CadastrarProdutos">Cadastrar Produtos</string>
    <string name="visualizarProdutos">Visualizar Produtos</string>
    <string name="alterarProdutos">Alterar Produtos</string>
    <string name="excluirProdutos">Excluir Produtos</string>
    <string name="Pedido">Pedido</string>
    <string name="CadastrarPedidos">Cadastrar Pedidos</string>
    <string name="visualizarPedidos">Visualizar Pedidos</string>
    <string name="alterarPedidos">Alterar Pedidos</string>
    <string name="excluirPedidos">Excluir Pedidos</string>
    <string name="CadastroCliente">Cadastro de cliente</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="listaClientes">Lista de clientes</string>
    <string name="clientescadastrados">Confira abaixo todos os clientes cadastrados</string>
    <string name="selecioneCliente">Alteração de clientes</string>
    <string name="selecaoClienteAlteracao">Toque no cliente que deseja alterar</string>
    <string name="alteracaoCliente">Alteração de cliente</string>
    <string name="Alterar">Alterar</string>
    <string name="Sucesso">Sucesso!</string>
    <string name="ok">ok</string>
    <string name="clienteCadastroSucesso">Cliente cadastrado com sucesso. Será enviado um sms de confirmação no telefone cadastrado.</string>
    <string name="impossibilidade">Impossibilidade</string>
    <string name="impossibilidadeMomentanea">No momento não foi possível cadastrar o cliente. Por favor verifique os dados informados e tente novamente mais tarde.</string>
    <string name="Entendi">Entendi</string>
    <string name="validacaoCpf">O Cpf Informado já foi cadastrado.</string>
    <string name="mensagemValidacaoCamposVazios">Por favor, preencha todos os campos.</string>
    <string name="semClientes">Não foram encontrados clientes cadastrados</string>
    <string name="clienteAlteracaoSucesso">Cliente alterado com sucesso.</string>
    <string name="impossibilidadeMomentaneaAlteracaoCliente">No momento não foi possível alterar os dados do cliente. Por favor verifique os dados informados e tente novamente mais tarde.</string>
    <string name="alterandoCliente">Alterando cliente, aguarde ...</string>
    <string name="excluaCliente">Exclusão de clientes</string>
    <string name="selecaoClienteExclusao">Toque no cliente que deseja excluir</string>
    <string name="Excluir">Excluir</string>
    <string name="exclusaoCliente">Exclusão de cliente</string>
    <string name="confrimarExclusao">Verifique com atenção antes de excluir</string>
    <string name="excluindoCliente">Excluindo cliente, aguarde...</string>
    <string name="clienteExclusaoSucesso">Cliente excluído com sucesso.</string>
    <string name="impossibilidadeMomentaneaExclusaoCliente">No momento não foi possível excluir o cliente. Por favor tente novamente mais tarde.</string>
    <string name="CadastroProduto">Cadastro de Produto</string>
    <string name="selecaoInfoProduto">Selecione cada uma das opções abaixo</string>
    <string name="tipoGrao">Selecione o tipo de grão:</string>
    <string name="arabicaDoCerrado">Arábica do cerrado</string>
    <string name="Canilon">Conilon</string>
    <string name="pontoTorra">Selecione o ponto da torra:</string>
    <string name="media">Média</string>
    <string name="forte">Forte</string>
    <string name="blend">"O produto terá Blend ? "</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="valor">Valor</string>
    <string name="cadastrando_produto_aguarde">Cadastrando produto, aguarde ...</string>
    <string name="produtoCadastroSucesso">Produto cadastrado com sucesso.</string>
    <string name="impossibilidadeMomentaneaCadastroProduto">No momento não foi possível cadastrar o produto. Por favor verifique os dados informados e tente novamente mais tarde.</string>
    <string name="listaProdutos">Lista de produtos</string>
    <string name="produtosCadastrados">Confira abaixo todos os produtos cadastrados</string>
    <string name="buscando_produtos_aguarde">Buscando produtos, aguarde ...</string>
    <string name="semProdutos">Não foram encontrados produtos cadastrados</string>
    <string name="selecioneProduto">Alteração de produtos</string>
    <string name="selecaoProdutoAlteracao">Toque no produto que deseja alterar.</string>
    <string name="altearProduto">Alterar</string>
    <string name="alteracaoProduto">Alteração de produto</string>
    <string name="alterandoProduto">Alterando produto, aguarde...</string>
    <string name="produtoAlteracaoSucesso">Produto alterado com sucesso.</string>
    <string name="impossibilidadeMomentaneaAlteracaoProduto">No momento não foi possível alterar os dados do produto. Por favor verifique os dados informados e tente novamente mais tarde.</string>
    <string name="excluaProdutos">Exclusão de produtos</string>
    <string name="selecaoProdutoExclusao">Toque no produto que deseja excluir</string>
    <string name="exclusaoProduto">Exclusão de produto</string>
    <string name="excluindoProduto">Excluindo produto, aguarde...</string>
    <string name="impossibilidadeMomentaneaExclusaoProduto">No momento não foi possível excluir o produto. Por favor tente novamente mais tarde.</string>
    <string name="produtoExclusaoSucesso">Produto excluído com sucesso.</string>
    <string name="selecioneClientePedido">Seleção cliente pedido</string>
    <string name="selecaoClientePedido">Toque no cliente para o qual\n será feito o pedido</string>
    <string name="fazerPedido">Fazer Pedido</string>
    <string name="adicionarItem">Adicionar Itens</string>
    <string name="pedido">Pedidos</string>
    <string name="pedidoCadastroSucesso">Pedido realizado com sucesso. Agora prossiga adicionando itens ao pedido.</string>
    <string name="impossibilidadeMomentaneaCadastroPedido">No momento não foi possível fazer o pedido. Por favor tente novamente mais tarde.</string>
    <string name="selecionePedido">Seleção de pedido</string>
    <string name="selecaoPedidoItemPedido">Toque no pedido para o qual\n deseja adicionar itens</string>
    <string name="adicaoItemPedido">Item do pedido</string>
    <string name="Adicionar">Adicionar</string>
    <string name="Quantidade">Quantidade</string>
    <string name="selecioneItemPedido">Seleção de item pedido</string>
    <string name="selecaoItemPedido">Toque no item que deseja adicionar ao pedido</string>
    <string name="semPedido">Não foram encontrados pedidos para o cliente selecionado</string>
    <string name="impossibilidadeAdicaoItemPedido">No momento não foi possível adicionar o item ao pedido. Por favor tente novamente mais tarde.</string>
    <string name="itemPedidoAdicaoSucesso">O item foi adicionado ao pedido com sucesso!</string>
    <string name="adicionando_itemPedido_aguarde">Adicionando item, aguarde ...</string>
    <string name="listaClientesSelecao">Seleção de clientes</string>
    <string name="clientesSelecaoPedido">Toque no cliente que\ndeseja ver os pedidos feitos</string>
    <string name="SelecaoVisualizacaoSelecaoPedidosClientesSelecionado">Seleção de pedidos</string>
    <string name="clientesSelecaoPedidoVisualizacao">Toque no pedido que deseja\nver os itens</string>
    <string name="listaItemPedido">Lista de itens do pedido</string>
    <string name="visualizacaoItemPedido">Confira abaixo os itens\ndo pedido selecionado.</string>
    <string name="semItemPedido">Não foram encontrados itens para o pedido selecionado.</string>
    <string name="buscandoItemPedidos">Buscando itens do pedido, aguarde ...</string>
    <string name="selecioneClientePedidoAlteracao">Seleção de cliente</string>
    <string name="selecaoClientePedidoAlteracao">Toque no cliente que deseja\nselecionar o pedido</string>
    <string name="selecionePedidoAlteracao">Seleção de pedido alteração</string>
    <string name="selecaoPedidoAlteracao">Toque no pedido que deseja alterar</string>
    <string name="listaItemPedidoAlteracao">Item pedido alteração</string>
    <string name="itemPedidoAlteracao">Toque no item do pedido\nque deseja alterar</string>
    <string name="selecioneItemPedidoAlteracao">Alteração de item do pedido</string>
    <string name="selecaoAlteracaoItemPedido">Toque no item do pedido\nque deseja alterar</string>
    <string name="selecioneProdutoItemPedidoAlteracao">Alteração produto item pedido</string>
    <string name="selecaoAlteracaoProdutoItemPedido">Toque no produto que será\n usado para a alteração</string>
    <string name="alteracaoItempedido">Alteração item pedido</string>
    <string name="itemPedidoSelecionado">O item do pedido selecionado:</string>
    <string name="itemPedidoProdutoSelecionado">Será substituído pelo item:</string>
    <string name="alterandoItemPedido">Alterando item do pedido, aguarde...</string>
    <string name="impossibilidadeMomentaneaAlteracaoItemPedido">No momento não foi possível alterar o item do pedido. Por favor tente novamente mais tarde.</string>
    <string name="itemPedidoAlteracaoSucesso">O item do pedido foi alterado com sucesso</string>
    <string name="clientesSelecaoClienteExclusoes">Toque no cliente que\n deseja efetuar as exclusões</string>
    <string name="opcoesExclusoesPedidoItem">Exclusao pedido e item</string>
    <string name="excluirPedido">Excluir pedidos</string>
    <string name="excluirItemPedido">Excluir item pedido</string>
    <string name="selecionePedidoExclusao">Seleção pedido exclusão</string>
    <string name="selecaoPedidoExclusao">Toque no pedido que deseja Excluir</string>
    <string name="exclusaoPedido">Exclusão de pedido</string>
    <string name="excluindoPedido">Excluindo pedido, aguarde...</string>
    <string name="impossibilidadeMomentaneaExclusaoPedido">No momento não foi possível excluir o pedido. Por favor tente novamente mais tarde.</string>
    <string name="pedidoExclusaoSucesso">Pedido excluído com sucesso.</string>
    <string name="selecionePedidoItemExclusao">Seleção pedido para item exclusão</string>
    <string name="selecaoPedidoItemExclusao">Toque no pedido que possui\nos itens que deseja excluir</string>
    <string name="selecioneItemPedidoExclusao">Seleção item pedido exclusão</string>
    <string name="selecaoItemPedidoExclusao">Toque no item que deseja excluir</string>
    <string name="exclusaoItemPedido">Exclusão item pedido</string>
    <string name="excluindoItemPedido">Excluindo item do pedido, aguarde...</string>
    <string name="impossibilidadeMomentaneaExclusaoItemPedido">No momento não foi possível excluir o item do pedido. Por favor tente novamente mais tarde.</string>
    <string name="itemPedidoExclusaoSucesso">O item do pedido foi excluído com sucesso.</string>
    <string name="enviando_mensagem_aguarde">Enviando mensagem, aguarde ...</string>
    <string name="envioMensagemSucesso">A mensagem foi enviada com sucesso</string>
    <string name="impossibilidadeEnvioSms">Não foi possível enviar a mensagem de confirmação, mas seu cadastro já se encontra efetuado com sucesso.</string>
</resources>