<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".controller.MainActivity">

    <View
        android:id="@+id/ContainerMenuInicial"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/container_menu_inicial"
        />

    <TextView
        android:id="@+id/txtTitleMenuInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MenuIinicial"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/ContainerMenuInicial"
        app:layout_constraintStart_toStartOf="@id/ContainerMenuInicial"
        app:layout_constraintEnd_toEndOf="@id/ContainerMenuInicial"
        android:layout_marginTop="33dp"
        />

    <TextView
        android:id="@+id/txtEscolhaOpcao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escolha_uma_das_op_es_abaixo"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtTitleMenuInicial"
        app:layout_constraintStart_toStartOf="@id/ContainerMenuInicial"
        app:layout_constraintEnd_toEndOf="@id/ContainerMenuInicial"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/botaoOpcoesCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:text="@string/op_oes_cliente"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@id/ContainerMenuInicial"
        app:layout_constraintEnd_toEndOf="@id/ContainerMenuInicial"
        app:layout_constraintStart_toStartOf="@id/ContainerMenuInicial"
        app:layout_constraintTop_toTopOf="@id/txtEscolhaOpcao"
        app:layout_constraintVertical_bias="0.121" />

    <Button
        android:id="@+id/botaoOpcoesProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:text="@string/op_es_produto"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@id/ContainerMenuInicial"
        app:layout_constraintEnd_toEndOf="@id/ContainerMenuInicial"
        app:layout_constraintStart_toStartOf="@id/ContainerMenuInicial"
        app:layout_constraintTop_toTopOf="@id/botaoOpcoesCliente"
        app:layout_constraintVertical_bias="0.31" />

    <Button
        android:id="@+id/botaoOpcoesPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:text="@string/op_es_pedido"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@id/ContainerMenuInicial"
        app:layout_constraintEnd_toEndOf="@id/ContainerMenuInicial"
        app:layout_constraintStart_toStartOf="@id/ContainerMenuInicial"
        app:layout_constraintTop_toTopOf="@id/botaoOpcoesProduto"
        app:layout_constraintVertical_bias="0.434" />

</androidx.constraintlayout.widget.ConstraintLayout>