<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">


    <View
        android:id="@+id/ContainerOpcoesPedido"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/container_menu_inicial"
        />

    <TextView
        android:id="@+id/txtTitleOpcoesPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pedido"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/ContainerOpcoesPedido"
        app:layout_constraintStart_toStartOf="@id/ContainerOpcoesPedido"
        app:layout_constraintEnd_toEndOf="@id/ContainerOpcoesPedido"
        android:layout_marginTop="33dp"
        />

    <TextView
        android:id="@+id/txtEscolhaOpcaoPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escolha_uma_das_op_es_abaixo"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtTitleOpcoesPedido"
        app:layout_constraintStart_toStartOf="@id/ContainerOpcoesPedido"
        app:layout_constraintEnd_toEndOf="@id/ContainerOpcoesPedido"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/botaoCadastroPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:text="@string/CadastrarPedidos"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@id/ContainerOpcoesPedido"
        app:layout_constraintEnd_toEndOf="@id/ContainerOpcoesPedido"
        app:layout_constraintStart_toStartOf="@id/ContainerOpcoesPedido"
        app:layout_constraintTop_toTopOf="@id/txtEscolhaOpcaoPedido"
        app:layout_constraintVertical_bias="0.201" />

    <Button
        android:id="@+id/botaoVisualizacaoPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:text="@string/visualizarPedidos"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@id/ContainerOpcoesPedido"
        app:layout_constraintEnd_toEndOf="@id/ContainerOpcoesPedido"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/ContainerOpcoesPedido"
        app:layout_constraintTop_toTopOf="@id/botaoCadastroPedido"
        app:layout_constraintVertical_bias="0.317" />

    <Button
        android:id="@+id/botaoAlteracaoPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:text="@string/alterarPedidos"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@id/ContainerOpcoesPedido"
        app:layout_constraintEnd_toEndOf="@id/ContainerOpcoesPedido"
        app:layout_constraintStart_toStartOf="@id/ContainerOpcoesPedido"
        app:layout_constraintTop_toTopOf="@id/botaoVisualizacaoPedido"
        app:layout_constraintVertical_bias="0.484" />

    <Button
        android:id="@+id/botaoExclusaoPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:text="@string/excluirPedidos"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@id/ContainerOpcoesPedido"
        app:layout_constraintEnd_toEndOf="@id/ContainerOpcoesPedido"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/ContainerOpcoesPedido"
        app:layout_constraintTop_toTopOf="@id/botaoAlteracaoPedido"
        app:layout_constraintVertical_bias="0.836" />

    <TextView
        android:id="@+id/botaoVoltarPedidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>